# ModernTSF

./: CLAUDE.md  README.md  README.zh-CN.md  README_zh.md  pyproject.toml
.claude/commands/: add-dataset.md  add-model.md  aggregate.md  pre-process.md  run.md  visualize.md
configs/: base.toml
configs/models/: Autoformer.toml  FEDformer.toml  TimesNet.toml
docs/en/: add-dataset.md  add-model.md  aggregate-results.md  configs.md  models.md  params.md  plot-bubble.md  rank-models.md
docs/zh-CN/: add-dataset.md  add-model.md  aggregate-results.md  configs.md  models.md  params.md  plot-bubble.md  rank-models.md
scripts/: aggregate_and_plot.sh  run_multi_configs.sh
src/benchmark/config/schema/: dataset.py  evaluation.py  task.py  training.py
src/benchmark/evaluation/: metrics.py  profile.py
src/benchmark/registry/: datasets.py  losses.py  metrics.py  models.py
src/benchmark/runner/: evaluator.py  run_one.py  trainer.py
src/benchmark/utils/: results.py
src/data/datasets/: base.py  custom.py  ett.py  solar.py
src/data/schemas/datasets/: ett.py  solar.py
src/models/autoformer/: model.py  registry.py  schema.py
src/models/crosslinear/: model.py
src/models/cyclenet/: model.py
src/models/fedformer/: model.py  registry.py  schema.py
src/models/module/: self_attention_family.py
src/models/segrnn/: model.py
src/models/tide/: model.py
src/models/timeemb/: model.py
src/models/timesnet/: model.py  registry.py  schema.py
tool/: aggregate_results.py  rank_models.py  tsne_ecg.py
