[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-tsf"
version = "0.1.0"
description = "ModernTSF — Modern Time Series Forecasting with TOML-driven configs, explicit sweeps, and registry-based extensibility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "pydantic",
    "einops",
    "fvcore",
    "ipython",
    "jupyterlab",
    # torch setting
    "torch==2.6.0+cu124",
    "torchinfo",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
    # HuggingFace datasets (for GIFT-EVAL data loading)
    "datasets",
]

[project.scripts]
modern-tsf = "benchmark.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["benchmark*", "data*", "models*"]

[tool.uv]
override-dependencies = [
    "numpy>=1.24",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
